<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="org.feup.carlosverissimo3001.theaterpal.RegisterActivity">
    <!--android:background="@drawable/background"-->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/name"
                android:inputType="text"
                android:maxLength="20"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/name"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:drawablePadding="8dp"
                android:autofillHints="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/nif"
                android:inputType="number"
                android:maxLength="9"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/nif"
                android:drawableStart="@drawable/ic_baseline_numbers_24"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:drawablePadding="8dp"
                android:autofillHints="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/credit_card_number"
                android:inputType="number"
                android:maxLength="16"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/credit_card_number"
                android:drawableStart="@drawable/baseline_credit_card_24"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/credit_card_validity_month"
                android:inputType="number"
                android:maxLength="2"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="Month (01-12)"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/credit_card_validity_year"
                android:inputType="number"
                android:maxLength="2"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="Year (00-99)"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:drawablePadding="8dp"/>


            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/register"
                android:textSize="18sp"
                app:cornerRadius="20dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>